[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/interface/game/UnitUI.gd" type="Script" id=1]


[node name="UnitUI" type="Control" groups=[
"UnitUI",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1620.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 14.0
text = "UnitType"
valign = 1

[node name="UnitType" type="Label" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 38.0
text = "UnitType"
valign = 1

[node name="Traits" type="Label" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 300.0
margin_bottom = 62.0
text = "UnitType"
valign = 1

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 300.0
margin_bottom = 122.0
mouse_filter = 2

[node name="Health" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 14.0
mouse_filter = 0
size_flags_horizontal = 3
text = "HP: 30/30"
valign = 1

[node name="Moves" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 32.0
mouse_filter = 0
size_flags_horizontal = 3
text = "HP: 30/30"
valign = 1

[node name="Experience" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 36.0
margin_right = 300.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 897.577, -113.152 )
mouse_filter = 0
size_flags_horizontal = 3
text = "HP: 30/30"
valign = 1

[node name="Abilities" type="Label" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 300.0
margin_bottom = 146.0
text = "UnitType"
valign = 1

[node name="AttacksLabel" type="Label" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 300.0
margin_bottom = 170.0
text = "Attacks"
valign = 1

[node name="Attacks" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 300.0
margin_bottom = 180.0

[node name="SkillsLabel" type="Label" parent="VBoxContainer"]
margin_top = 190.0
margin_right = 300.0
margin_bottom = 204.0
text = "Skills"
valign = 1

[node name="Skills" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 214.0
margin_right = 300.0
margin_bottom = 214.0
